<resources>
    <string name="app_name">كنيسة السيده العذراء مريم بالقصيرين</string>
    <string name="Hymens">ترانيم وتماجيد العدرا</string>
    <string name="booking_aodas">حجز القداسات</string>
    <string name="booking_nahda">حجز النهضة</string>
    <string name="about">عن البرنامج</string>

    <string name="loading">جاري التسجيل</string>
    <string name="no_data_found">لا يوجد بيانات</string>
    <string name="no_internet_connection">لا يوجد اتصال بالانترنت</string>

    <string name="rightsString">جميع الحقوق محفوظه</string>
    <string name="AboutString">هذا البرنامج خاص بكنيسة العذراء مريم بالقصيرين - الزاويه الحمراء خاص بحجز قداسات ونهضات العدرا فى عام 2021</string>
    <string name="full_name">الأسم بالكامل</string>
    <string name="national_id">الرقم القومي</string>
    <string name="birthday_date">تاريخ الميلاد</string>
    <string name="gender">النوع</string>
    <string name="male">ذكر</string>
    <string name="female">انثي</string>
    <string name="submit">تاكيد الحجز</string>
    <string name="cancel">اغلاق</string>
    <string name="book">حجز</string>
    <string name="from">من</string>
    <string name="to">الي</string>

    <string name="name_error">من فضلك ادخل الاسم بالكامل</string>
    <string name="national_id_error">من فضلك ادخل الرقم القومي</string>
    <string name="birthday_error">من فضلك ادخل تاريخ الميلاد</string>
    <string name="data_error">من فضلك ادخل البيانات الصحيحة</string>
    <string name="gender_error">من فضلك ادخل النوع</string>

    <string name="confirm_book">تم الحجز بنجاح من فضلك احتفظ بكود التسجيل لتتمكن من الحضور</string>
    <string name="testCode">1492–01-202181</string>
    <string name="describeHymens">جميع تماجيد والحان العدرا</string>
    <string name="booking_pray_describe">حجز جميع القداسات </string>
    <string name="follow_reservation">متابعة حجوزاتى</string>
    <string name="follow_reservation_desc">متابعة والغاء الحجوزات</string>
    <string name="aya">كل يوم آيه</string>
    <string name="aya_desc">صوت ربنا ليك</string>
    <string name="about_desc">عن البرنامج وحقوق الملكيه</string>
    <string name="Code">123XXXXXXXXXXX</string>
    <string name="delete">الغاء</string>
    <string name="register_code">كود التسجيل</string>
    <string name="image_confirmation_describtion">Image Confirmation</string>
    <string name="image_hymens">tranem</string>
    <string name="code_info">اكتب الكود المكون من 14 رقم فقط</string>
    <string name="search_for_cancel">بحث</string>

</resources>