<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:id="@+id/bookingEventContainer">

    <LinearLayout
        android:id="@+id/body_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:src="@drawable/vergionmary"
            android:layout_height="240dp"
            android:alpha=".8"/>

        <EditText
            android:id="@+id/fullNameET"
            android:layout_marginTop="1dp"
            style="@style/edit_text_sty"
            android:inputType="text"
            android:textDirection="rtl"
            android:hint="@string/full_name" />

        <EditText
            android:id="@+id/nationalIdET"
            style="@style/edit_text_sty"
            android:inputType="number"
            android:textDirection="rtl"
            android:hint="@string/national_id" />

        <EditText
            android:id="@+id/birthdayDateET"
            style="@style/edit_text_sty"
            android:focusable="false"
            android:hint="@string/birthday_date"
            android:textDirection="rtl"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_calender"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <Spinner
                android:id="@+id/genderSpinner"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:overlapAnchor="false"
                android:background="@drawable/bg_white_with_gray_border" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="50dp"
            android:weightSum="2">

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="0dp"
                android:layout_height="@dimen/my_edit_text_height"
                android:layout_weight="1"
                android:layout_marginEnd="25dp"
                android:background="@drawable/bg_white_with_red_border"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textColor="@color/red"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/confirmBookingBtn"
                android:layout_width="0dp"
                android:layout_height="@dimen/my_edit_text_height"
                android:layout_weight="1"
                android:background="@drawable/bg_white_with_blue_border"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>