<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/dashboard_bg"
    tools:context=".activities.HomeActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:fitsSystemWindows="true"
        android:theme="@style/dashboardStyle">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsed_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/purple_200"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="@string/app_name"
            app:collapsedTitleTextAppearance="@style/dashboardStyle"
            app:expandedTitleTextAppearance="@style/dashboardStyle"
            android:background="@drawable/dashboard_bg">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_marginBottom="30dp"
                android:scaleType="centerCrop"
                android:layout_marginRight="20dp"
                android:src="@drawable/dashboard_icon"
                android:layout_gravity="center|end"
                app:layout_collapseMode="parallax"
                />
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/second_bg_dashboard"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:clipToPadding="false"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:layout_margin="13dp"
                    app:cardCornerRadius="40dp"
                    >
                    <LinearLayout
                        android:id="@+id/taranimCardView"
                        android:clickable="true"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        >
                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/book_icon"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textStyle="bold"
                            android:text="@string/Hymens"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/gray"
                            android:layout_margin="10dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/describeHymens"
                            android:padding="12dp"
                            android:textColor="@android:color/darker_gray"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:layout_margin="13dp"
                    app:cardCornerRadius="40dp">
                    <LinearLayout
                        android:id="@+id/bookAodasCardView"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        >
                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/church_icon"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textStyle="bold"
                            android:text="@string/booking_aodas"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/gray"
                            android:layout_margin="10dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/booking_aodas_describe"
                            android:padding="12dp"
                            android:textColor="@android:color/darker_gray"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:clipToPadding="false"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:layout_margin="13dp"
                    app:cardCornerRadius="40dp">
                    <LinearLayout
                        android:id="@+id/follow_card"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        >
                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/follow_icon"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textStyle="bold"
                            android:text="@string/followResevation"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/gray"
                            android:layout_margin="10dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/followResevation_desc"
                            android:padding="12dp"
                            android:textColor="@android:color/darker_gray"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:layout_margin="13dp"
                    app:cardCornerRadius="40dp">
                    <LinearLayout
                        android:id="@+id/aya_card"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        >
                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:src="@drawable/aya"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textStyle="bold"
                            android:text="@string/aya"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/gray"
                            android:layout_margin="10dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/aya_desc"
                            android:padding="12dp"
                            android:textColor="@android:color/darker_gray"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:clipToPadding="false"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:layout_margin="13dp"
                    app:cardCornerRadius="40dp">
                    <LinearLayout
                        android:id="@+id/aboutCardView"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        >
                        <ImageView
                            android:layout_width="45dp"
                            android:layout_height="45dp"

                            android:src="@drawable/about"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textStyle="bold"
                            android:text="@string/about"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/gray"
                            android:layout_margin="10dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/about_desc"
                            android:padding="12dp"
                            android:textColor="@android:color/darker_gray"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>





    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>