<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activities.HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/homePager"
                android:layout_width="match_parent"
                android:layout_height="230dp"/>
            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/homePager"
                app:tabGravity="center"
                app:tabIndicatorHeight="0dp"
                app:tabBackground="@drawable/indicator_selector"
                >
            </com.google.android.material.tabs.TabLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="12dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="25dp"
                        android:orientation="vertical"
                        android:gravity="center">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/praise_icon"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/icon" />

                        <TextView
                            android:id="@+id/tittle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Hymens"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:transitionName="SharedName"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal"
                    >

                    <androidx.cardview.widget.CardView

                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.3"
                        android:layout_marginEnd="5dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:paddingTop="25dp"
                            android:paddingBottom="25dp"
                            android:layout_gravity="center">

                            <de.hdodenhof.circleimageview.CircleImageView
                                android:layout_width="55dp"
                                android:layout_height="55dp"
                                android:src="@drawable/booking"
                                android:layout_gravity="center" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/booking_aodas"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                android:transitionName="SharedName"
                                android:textColor="@color/black" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>


                </LinearLayout>

                <androidx.cardview.widget.CardView

                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="25dp"
                        android:orientation="vertical"
                        android:gravity="center">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/about" />

                        <TextView
                            android:id="@+id/tittle5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:transitionName="SharedName"
                            android:textColor="@color/black" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>